--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask==2.2.4
 pandas==1.3.5
-scikit-learn==1.3.0
-joblib==1.2.0
-pylint==2.17.5
-pytest==7.1.2
+scikit-learn==1.0.2
+joblib
+pylint
+pytest
