--- a/azure-pipelines-for-self-hosted-agent.yml
+++ b/azure-pipelines-for-self-hosted-agent.yml
@@ -16,7 +16,7 @@ variables:
   webAppName: 'flask-ml-sl-app'
 
   # Environment name
-  environmentName: 'flask-ml-service'
+  environmentName: 'flask-ml-sl-app'
 
   # Project root folder. Point to the folder containing manage.py file.
   projectRoot: $(System.DefaultWorkingDirectory)
