--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,54 +1,55 @@
-# Python to Linux Web App on Azure
-# Build your Python project and deploy it to Azure as a Linux Web App.
-# Change python version to one thats appropriate for your application.
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
+# Starter pipeline    
+# Start with a minimal pipeline that you can customize to build and deploy your code.
+# Add steps that build, run tests, deploy, and more:
+# https://aka.ms/yaml
 trigger:
 - main
 
-variables:
-  # Azure Resource Manager connection created during pipeline creation
-  azureServiceConnectionId: 'b62769aa-b7e0-4b3c-a1a1-fea55b93aaed'
+# TODO: Replace the agent pool name
+pool: myAgentPool
 
-  # Web app name
+variables:
+  # TODO: Replace the service connection name as used in the DevOps project settings
+  azureServiceConnectionId: 'project2connection'
+  
+  # TODO: Specify the value of the existing Web App name
   webAppName: 'flask-ml-sl-app'
 
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-
   # Environment name
-  environmentName: 'flask-ml-sl-app'
+  environmentName: 'flask-ml-sl-env'
 
   # Project root folder. Point to the folder containing manage.py file.
   projectRoot: $(System.DefaultWorkingDirectory)
-
-  # Python version: 3.8
-  pythonVersion: '3.8'
 
 stages:
 - stage: Build
   displayName: Build stage
   jobs:
   - job: BuildJob
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '$(pythonVersion)'
-      displayName: 'Use Python $(pythonVersion)'
+    pool: myAgentPool
+    steps:    
+    - script: |
+        python3 -m pip install --upgrade pip
+        python3 -m pip install setup
+        python3 -m pip install -r requirements.txt
+      workingDirectory: $(projectRoot)
+      displayName: 'myStep 1'
 
     - script: |
-        python -m venv antenv
-        source antenv/bin/activate
-        python -m pip install --upgrade pip
-        pip install setup
-        pip install -r requirements.txt
+        export PATH=$HOME/.local/bin:$PATH
+        make install
       workingDirectory: $(projectRoot)
-      displayName: "Install requirements"
+      displayName: 'myStep 2'
+
+    - script: |
+        export PATH=$HOME/.local/bin:$PATH
+        make install
+        make lint
+      workingDirectory: $(projectRoot)
+      displayName:  'myStep 3 - Run lint tests'
 
     - task: ArchiveFiles@2
-      displayName: 'Archive files'
+      displayName: 'myStep 4 - Archive files'
       inputs:
         rootFolderOrFile: '$(projectRoot)'
         includeRootFolder: false
@@ -57,18 +58,15 @@ stages:
         replaceExistingArchive: true
 
     - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-      displayName: 'Upload package'
+      displayName: 'myStep 5 - Upload package'
       artifact: drop
-
 - stage: Deploy
   displayName: 'Deploy Web App'
   dependsOn: Build
   condition: succeeded()
   jobs:
   - deployment: DeploymentJob
-    pool:
-      vmImage: $(vmImageName)
-    environment: $(environmentName)
+    pool: myAgentPool
     strategy:
       runOnce:
         deploy:
