--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,8 @@ stages:
   condition: succeeded()
   jobs:
   - deployment: DeploymentJob
-    pool: myAgentPool
+    pool: myAgentPool'
+    environment: $(environmentName)
     strategy:
       runOnce:
         deploy:
